# rust-linux-updater

./: .gitignore  Cargo.toml  devices-example.json  readme.md  setup.sh  update.sh
.github/: dependabot.yml
.github/workflows/: test-rust.yml
src/: main.rs
